--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fresh and Box – DUO BOX</title>
+  <img src="Snapchat-1610988015.jpg" alt="DUO BOX" style="width:100%; max-width:300px; border-radius:12px;">
   <style>
     body { margin: 0; font-family: Arial, Helvetica, sans-serif; background:#f7f7f7; color:#222; }
     header { background: linear-gradient(135deg,#2ecc71,#3498db); color:white; padding:40px 20px; text-align:center; }
