--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fresh and Box – DUO BOX</title>
-  <img src="Snapchat-1610988015.jpg" alt="DUO BOX" style="width:100%; max-width:300px; border-radius:12px;">
   <style>
     body { margin: 0; font-family: Arial, Helvetica, sans-serif; background:#f7f7f7; color:#222; }
     header { background: linear-gradient(135deg,#2ecc71,#3498db); color:white; padding:40px 20px; text-align:center; }
@@ -43,7 +42,7 @@
   <div class="product">
     <div class="card">
       <h3>DUO BOX</h3>
-      <img src="duo-box.png" alt="Prévisualisation DUO BOX" style="width:100%;border-radius:12px;margin:10px 0;" />
+      <img src="Snapchat-1610988015.jpg" alt="Prévisualisation DUO BOX" style="width:100%; max-width:300px; border-radius:12px; margin:10px 0;" />
       <p>DUO BOX est un tupperware innovant capable de <strong>chauffer un côté</strong> et de <strong>refroidir l’autre</strong>. Idéal pour conserver un repas complet à la température parfaite.</p>
       <p class="price">89,99 €</p>
       <p>Produit disponible prochainement.</p>
