--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="product">
     <div class="card">
       <h3>DUO BOX</h3>
-      <img src="Snapchat-1610988015.jpg" alt="Prévisualisation DUO BOX" style="width:100%; max-width:300px; border-radius:12px; margin:10px 0;" />
+      <img src="ChatGPT Image 1 févr. 2026, 15_35_10.png" alt="Prévisualisation DUO BOX" style="width:100%; max-width:300px; border-radius:12px; margin:10px 0;" />
       <p>DUO BOX est un tupperware innovant capable de <strong>chauffer un côté</strong> et de <strong>refroidir l’autre</strong>. Idéal pour conserver un repas complet à la température parfaite.</p>
       <p class="price">89,99 €</p>
       <p>Produit disponible prochainement.</p>
