--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="card">
       <h3>Accéder au site via QR Code</h3>
       <p>Scanne ce QR code pour accéder au site Fresh and Box :</p>
-      <img src="fresh-and-box-qr.png" alt="QR Code Fresh and Box" style="width:200px;height:200px;" />
+      <img src="frame.png" alt="QR Code Fresh and Box" style="width:200px;height:200px;" />
       <p style="font-size:0.9em;">(Lien de démonstration)</p>
     </div>
   </div>
